Updated surefire testing.